--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import-normalize; /* bring in normalize.css styles */
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 body {
   margin: 0;
@@ -12,4 +13,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.btn {
+  padding: 10px;
+  margin: 10px;
+}
+
+.list {
+  display: flex;
 }
